<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <View android:layout_height="1px"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:background="@color/darkBlue" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="16dip"
            android:text="@string/addnodes_time"
            android:layout_marginRight="5dp"/>

        <TextView
            android:id="@+id/et_moreaction_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:inputType="text"
            android:text="" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="3dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="16dip"
            android:text="@string/addnodes_money"
            android:layout_marginRight="5dp"/>

        <EditText
            android:id="@+id/et_moreaction_money"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:inputType="text"
            android:text="" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="3dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="16dip"
            android:text="@string/addnodes_type"
            android:layout_marginRight="5dp"/>

        <Spinner
            android:id="@+id/sp_moreaction_type"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:textSize = "14sp">
        </Spinner>
    </LinearLayout>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="3dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="16dip"
            android:text="@string/addnodes_remark"
            android:layout_marginRight="5dp"/>

        <EditText
            android:id="@+id/et_moreaction_remark"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:inputType="text"
            android:text="" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="15dp"
        android:gravity="center">

        <Button
            android:id="@+id/bt_moreaction_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addnodes_cancel" 
            android:textSize="16sp"
            android:textColor="#FFFFFF"
            android:background="@color/darkBlue"/>

        <Button
            android:id="@+id/bt_moreaction_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/moreaction_update"
            android:textSize="16sp"
            android:textColor="#FFFFFF"
            android:background="@color/darkBlue"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:paddingLeft="6dp"
            android:paddingRight="6dp"/>

        <Button
            android:id="@+id/bt_moreaction_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/moreaction_delete"
            android:textSize="16sp"
            android:textColor="#FFFFFF"
            android:background="@color/darkBlue"
            android:paddingLeft="6dp"
            android:paddingRight="6dp"/>
    </LinearLayout>

</LinearLayout>